--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/normalize-scss/sass/normalize/import-now";
+
+* {
+  font-size: 10px;
+  margin: 0;
+}
