adding search functionality

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,10 @@
-<div id="container">
-  <h1>Github Finder App</h1>
-  <p>Version 0.1.0</p>
-  <p>Made by Stefan Kalan</p>
-  <p>&copy; 2020</p>
+<div id="container"> 
+  <mat-card id="card">
+    <mat-card-title class="title">Github Finder App</mat-card-title>
+    <mat-card-content>
+      <p>Version 0.1.0</p>
+      <p>Made by Stefan Kalan</p>
+      <p>&copy; 2020</p>
+    </mat-card-content>
+  </mat-card>
 </div>
