--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,11 +1,8 @@
-<nav id="nav-bar">
-  <ul id="nav-left">
-    <li><i class="fab fa-github"></i></li>
-    <li><h1>Github Finder</h1></li>
-  </ul>
-  <ul id="nav-right">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/">Random User</a></li>
-    <li><a routerLink="/about">About</a></li>
-  </ul>
-</nav>
+<mat-toolbar id="nav-bar">
+  <span><i class="fab fa-github"></i></span>
+  <span><h1>Github Finder</h1></span>
+  <span class="spacer"></span>
+  <span><a routerLink="/home">Home |</a></span> 
+  <span><a routerLink="/">Random User |</a></span> 
+  <span><a routerLink="/about">About</a></span>
+</mat-toolbar>
