--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,15 +1,21 @@
-#container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  h1 {
-    font-size: 4rem;
-  }
+#card {
+  margin-top: 5rem;
+  text-align: center;
+  width: 40vw;
 
   p {
-    font-size: 2rem;
-    line-height: 3rem;
+    font-size: 1.8rem;
+    line-height: 2.2rem;
   }
+
+  .title {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
