--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@
   font-size: 10px;
   margin: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
