finishing basic functionality

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,7 +2,8 @@
   <span><i class="fab fa-github"></i></span>
   <span><h1>Github Finder</h1></span>
   <span class="spacer"></span>
-  <span><a routerLink="/home">Home |</a></span> 
-  <span><a routerLink="/">Random User |</a></span> 
+  <span><a routerLink="/home">Home</a></span> 
+  <span class="divider">|</span>
   <span><a routerLink="/about">About</a></span>
 </mat-toolbar>
+
