--- a/src/app/user-search/user-search.component.scss
+++ b/src/app/user-search/user-search.component.scss
@@ -15,6 +15,7 @@
     input {
       font-size: 2rem;
     }
+
     .placeholder {
       font-size: 2rem;
     }
@@ -66,11 +67,11 @@
     margin-bottom: 2rem;
   }
 
-  button {
+  a {
+    text-decoration: none;
+    color: black;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    color: black;
-
     span {
       font-size: 1.5rem;
     }
@@ -79,4 +80,11 @@
 
 .container:nth-last-child(-n+4) {
   margin-bottom: 6rem;
+}
+
+#spinner-container {
+  margin-top: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
