--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -19,3 +19,22 @@
   justify-content: center;
   align-items: flex-start;
 }
+
+@media (max-width: 480px) {
+
+  #card {
+    margin-top: 3.5rem;
+    text-align: center;
+    width: 70%;
+
+    p {
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
+
+    .title {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+    }
+  }
+}
