--- a/src/app/user-search/user-search.component.scss
+++ b/src/app/user-search/user-search.component.scss
@@ -88,3 +88,27 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 480px) {
+
+  #card {
+    width: 80%;
+    margin-top: 2rem;
+
+    .input-field {
+      width: 60%;
+  
+      input {
+        font-size: 1.4rem;
+      }
+  
+      .placeholder {
+        font-size: 1.4rem;
+      }
+    }
+    .buttons {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
