adding small fixes and type defs

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -45,7 +45,8 @@
   #nav-bar {
 
     h1 {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
+      margin-right: 1rem;
     }
   
     .spacer {
@@ -53,13 +54,13 @@
     }  
     
     i {
-        margin-left: 1.5rem;
-        font-size: 1.5rem;
+        margin-left: 0.5rem;
+        font-size: 1.8rem;
         padding: 1rem;
       }
     
     a {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
     }
   
     span:first-child {
